@@ -10,13 +10,15 @@ import org.springframework.web.bind.annotation.RestController;
 import pl.psk.upc.configuration.UserInfoUserDetailsService;
 import pl.psk.upc.web.UpcRestPaths;
 
+import java.util.Date;
 import java.util.stream.Collectors;
 
 @RestController
 public class LoginController {
+    long twentyFourHoursInMillis = 24 * 60 * 60 * 1000;
 
     private final UserInfoUserDetailsService userDetailsService;
-    private String KEY = "secretkey123";
+    private String KEY = "secretsecretsecretsecretsecretsecretsecretsecretsecretsecret";
 
     public LoginController(UserInfoUserDetailsService userDetailsService) {
         this.userDetailsService = userDetailsService;
@@ -26,10 +28,13 @@ public class LoginController {
     public String login(@RequestBody LoginRequestDto loginRequestDto) {
         UserDetails userDetails = userDetailsService.loadUserByUsername(loginRequestDto.getEmail());
         Algorithm algorithm = Algorithm.HMAC256(KEY);
+        long currentTimeMillis = System.currentTimeMillis();
         return JWT.create()
                 .withSubject(userDetails.getUsername())
                 .withIssuer("self")
-                .withClaim("roles", userDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()))
+                .withIssuedAt(new Date(currentTimeMillis))
+                .withExpiresAt(new Date(currentTimeMillis + twentyFourHoursInMillis))
+                .withClaim("role", userDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList().get(0))
                 .sign(algorithm);
     }
 
